--- a/config/locales/devise.fr.yml
+++ b/config/locales/devise.fr.yml
@@ -15,7 +15,7 @@ fr:
       not_found_in_database: "Email et/ou mot de passe incorrect(s)."
       timeout: "Votre session est expirée. Veuillez vous reconnecter pour continuer."
       unauthenticated: "Vous devez vous connecter ou vous inscrire pour continuer."
-      unconfirmed: "Vous devez valider votre compte pour continuer."
+      unconfirmed: "Vous devez valider votre addresse courriel pour continuer."
     mailer:
       confirmation_instructions:
         subject: "Instructions de confirmation"
